# Infinite1942

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Todo.md
FBXImport Example/: Infinite1942.Other.sln
FBXImport Example/Infinite1942.DesktopGL/: Game1.cs  Infinite1942.csproj  Program.cs  app.manifest
Infinite1942/: Infinite1942.Android.sln  Infinite1942.Other.sln  Infinite1942.Windows.sln  Infinite1942.iOS.sln  Infinite1942.sln
Infinite1942.Silk/: Infinite1942.Silk.sln
Infinite1942.Silk/Infinite1942/: DXGraphicsDevice.cs  DXMeshRenderer.cs  DXShader.cs  Game.DirectX.cs  Game.OpenGL.cs  Game.cs  GraphicsDevice.cs  IWindow.cs  Infinite1942.csproj  MeshRenderer.cs  Model.cs  Program.cs  SDLWindow.cs  Shader.cs
Infinite1942.Veldrid/: Infinite1942.sln
Infinite1942.Veldrid/Infinite1942/: Infinite1942.csproj  Program.cs
Infinite1942/Engine/: Engine.csproj  Game.cs
Infinite1942/Infinite1942/: Infinite1942.csproj  Infinite1942Game.cs  Program.cs
Infinite1942/Infinite1942.Android/: Activity1.cs  AndroidManifest.xml  Infinite1942.Android.csproj  Infinite1942.Android.csproj.SdkResolver.-1361486513.proj.Backup.tmp  MainActivity.cs
Infinite1942/Infinite1942.Content/: Content.npl  Infinite1942.Content.csproj
Infinite1942/Infinite1942.Content.old/: Infinite1942.Content.csproj
Infinite1942/Infinite1942.Core/: Infinite1942.Core.csproj  Infinite1942Game.cs  Transform.cs
Infinite1942/Infinite1942.DesktopGL/: Infinite1942.DesktopGL.csproj  Program.cs
Infinite1942/Infinite1942.Shared/: Infinite1942.Shared.projitems  Infinite1942.Shared.shproj  Infinite1942Game.cs
Infinite1942/Infinite1942.WinDX/: Game1.cs  Infinite1942.WinDX.csproj  Program.cs  app.manifest
engine/: CMakeLists.txt
engine/include/: service_locator.h
engine/include/services/: service.h
engine/src/: engine.cpp  service_locator.cpp
engine/src/platform/: GLWindow.cpp  GLWindow.h
game/: CMakeLists.txt
game/include/: infinite1942Game.h
src/: Infinite1942.DesktopGL.sln  Infinite1942.Windows.sln  Infinite1942.iOS.sln
(+48 files in other folders)
